--- a/assets/sass/sections/_contact-us.scss
+++ b/assets/sass/sections/_contact-us.scss
@@ -19,9 +19,6 @@
   @media screen and (max-width: $bp-medium) {
     height: 600px;
   }
-  @media screen and (max-width: $bp-xsmall) {
-    height: 500px;
-  }
 
   h2 {
     text-align: center;
