--- a/assets/sass/sections/_example.scss
+++ b/assets/sass/sections/_example.scss
@@ -9,7 +9,7 @@
   background-size: cover;
   background-position-x: center;
   @media only screen and (max-width: $bp-medium) {
-    height: 800px;
+    height: 1000px;
   }
 
   h2 {
