--- a/assets/sass/sections/_how-creators.scss
+++ b/assets/sass/sections/_how-creators.scss
@@ -275,7 +275,6 @@
   }
 
   @media screen and (max-width: $bp-xsmall) {
-    height: max-content;
     display: flex;
     flex-direction: column;
     align-items: center;
